# rag-demo

./: .env.sample  .gitignore  Dockerfile  Dockerfile-monostage  Makefile  README.md  aa20674-12_sections.md  chunks_output.txt  config.yaml  grobid_config.json  pyproject.toml  qa_dataset.json  structured_output.md  structured_output_canonical.md  structured_output_line.md  structured_output_raw.md  vizualize.md
.deepeval/: .deepeval_telemetry.txt
.github/workflows/: cicd.yaml
src/rag_demo/: app.py  evaluation_deepeval_wip.py  evaluation_ragas.py  htmlTemplates.py  ingest_to_qdrant.py  test_classical_parser.py  test_grobid_parser.py  test_llm_markdown.py  test_llm_toc.py  test_pagermage_parser.py  test_pdfplumber_parser.py  test_pymupdf_parser.py  test_temp.py  test_unstructured.py  utils.py
src/rag_demo/folder/: 2014BaltA..23..103N  2014BaltA..23..199D
src/rag_demo/output_folder/aa20674-12/auto/: aa20674-12.md  aa20674-12_content_list.json  aa20674-12_middle.json  aa20674-12_model.json
src/rag_demo/output_folder/aa23988-14/auto/: aa23988-14.md  aa23988-14_content_list.json  aa23988-14_middle.json  aa23988-14_model.json
tei_output/: Thesis_de_Meulenaer.grobid.tei.xml  aa20674-12.grobid.tei.xml
